src/objects/SPE_SPETracker__c.object
<CustomObject>
    <customHelpPage>SPE_SPE_Definition_Help_Page</customHelpPage>
    <fields>
        <fullName>Avg_SPE_Score__c</fullName>
        <label>Avg SPE Score</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Tracker_SPE_Score__c</fullName>
        <formula>Total_SPE_Score__c /  Count_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Tracker SPE Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>Global Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Planning and Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mature Software Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Support Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIA AND ENTERTAINMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Frequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single RAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM and Mature Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mature Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perfect Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Creation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM and OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G Core</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>GLOBAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE SOFTWARE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL NETWORKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Please add related tracker comment</description>
        <inlineHelpText>Please add related tracker comment</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SPE Trackers</relationshipLabel>
        <relationshipName>SPE_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Score__c</fullName>
        <label>Count Score</label>
        <summaryFilterItems>
            <field>SPE_TrackerScore__c.SPEScore__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SPE_TrackerScore__c.SPETracker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfExecution__c</fullName>
        <label>Date Of Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForceSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAX_Score__c</fullName>
        <label>Max SPE Score</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_SPE_Score__c</fullName>
        <label>Min SPE Score</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewExecution__c</fullName>
        <formula>DateOfExecution__c -  VALUE( $Label.SPE_ScheduleDateModifier)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>SPEPlan__r.Owner:User.FirstName+&apos; &apos;+SPEPlan__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Date__c</fullName>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>SurveyExecutionBeforeIndays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PilotTestDataCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pilot (Test Data)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewOfSPE__c</fullName>
        <label>Review Of SPE</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPEPlanStage__c</fullName>
        <formula>TEXT(SPEPlan__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPE Plan Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEPlan__c</fullName>
        <label>SPE Plan</label>
        <referenceTo>SPE_SPEPlan__c</referenceTo>
        <relationshipLabel>SPE Trackers</relationshipLabel>
        <relationshipName>SPE_Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SPETemplateId__c</fullName>
        <formula>SPETemplate__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPE Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPETemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Template</label>
        <referenceTo>SPE_SPETemplate__c</referenceTo>
        <relationshipLabel>SPE Trackers</relationshipLabel>
        <relationshipName>SPE_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_1_Upper_Bound__c</fullName>
        <label>Score 1 Upper Bound</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_1_lower__c</fullName>
        <label>Score 1 Lower Bound</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_2_Lower_Bound__c</fullName>
        <label>Score 2 Lower Bound</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_2_Upper_Bound__c</fullName>
        <label>Score 2 Upper Bound</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_3_Loewr_Bound__c</fullName>
        <label>Score 3 Loewr Bound</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_3_Upper_Bound__c</fullName>
        <label>Score 3 Upper Bound</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_4_Lower_Bound__c</fullName>
        <label>Score 4 Lower Bound</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SendSurveyLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Survey Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Detail__c</fullName>
        <formula>HYPERLINK(&apos;/apex/SPE_TrackerView?id=&apos;+Id  , &apos;Show Detail&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Details__c</fullName>
        <formula>HYPERLINK(&apos;/apex/SPE_TrackerView?id=&apos;+ Id , &apos;Show Details&apos; , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyDueDate__c</fullName>
        <formula>DateOfExecution__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SurveyExecutionBeforeIndays__c</fullName>
        <formula>NewExecution__c - SPEPlan__r.SurveyExecutionBeforeIndays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SurveyLinkUpdate__c</fullName>
        <formula>LastModifiedDate  - 0.040277</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Link Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SurveyReminderBeforeExecutionDate__c</fullName>
        <formula>NewExecution__c - SPEPlan__r.SurveyReminderBeforeExecutionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SystemTime__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_SPE_Score__c</fullName>
        <label>Total SPE Score</label>
        <summarizedField>SPE_TrackerScore__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>SPE_TrackerScore__c.SPEScore__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SPE_TrackerScore__c.SPETracker__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracker_Identifier__c</fullName>
        <label>Tracker Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isContainsSurveyBasedPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isContainsSurveyBasedPI</label>
        <type>Checkbox</type>
    </fields>
    <label>SPE Tracker</label>
    <listViews>
        <fullName>AllCompletedTrackers</fullName>
        <columns>Show_Detail__c</columns>
        <columns>NAME</columns>
        <columns>SPEPlan__c</columns>
        <columns>Region__c</columns>
        <columns>SubRegion__c</columns>
        <columns>Country__c</columns>
        <columns>Project__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Trackers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllPendingTrackers</fullName>
        <columns>NAME</columns>
        <columns>SPEPlan__c</columns>
        <columns>Region__c</columns>
        <columns>SubRegion__c</columns>
        <columns>Country__c</columns>
        <columns>Project__c</columns>
        <columns>DateOfExecution__c</columns>
        <columns>NewExecution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>All Pending Trackers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SPE Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPE Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>